<resources>
    <string name="app_name">Calculos Tributario</string>
    <string name="impuesto_de_alcabala">Impuesto de Alcabala.</string>
    <string name="impuesto_vehicular">Impuesto Vehicular.</string>
    <string name="unidad_de_referencia_procesal">Unidad de Referencia Procesal.</string>


    <string name="impuesto_alcalad_texto_peq">(*) Si el valor de autovaluo o el valor de transferencia no es mayor al monto de 10 UIT, no corresponde pagar el inpuesto de alcabala</string>
    <string name="impuesto_general_a_las_ventas_16_ipm_2">Impuesto General a las Ventas 16% + IPM 2%</string>

    <string name="total">Total</string>
    <string name="sub_total">Sub Total</string>
    <string name="igv">IGV</string>

    <string name="impuesto_vehicular_text">En ningún caso el monto a pagar será inferior al 1.5% de la UIT vigente del 1ero de Enero del Año que corresponde al inpuesto.</string>





    <string name="banner_ad_unit_id_for_testing">ca-app-pub-3940256099942544/6300978111</string>




</resources>
