<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu_calculadora"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:background="@mipmap/calculadora_menu_fondo"
    tools:context="legalmovil.com.calculotributario.view.calculadora.MenuCalculadora">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:background="@color/black"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@android:color/transparent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:onClick="onClickSlider">



                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_weight="12"
                        android:gravity="center_vertical|right"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <TextView
                            android:text="Cálculos Tributarios"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView3"
                            android:elevation="1dp"
                            android:textColor="@android:color/white"
                            android:paddingRight="40dp"
                            android:layout_weight="0.72"
                            android:textSize="18dp" />


                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.Toolbar>
            <!--app:popupTheme="@style/AppTheme.PopupOverlay"/>-->
        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/idText"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:onClick="onClickCalculadoraAlcabala"

            android:text="@string/impuesto_de_alcabala"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:id="@+id/impuesstoAlcabala"
            android:layout_marginTop="75dp"
            android:background="@color/text_hint_normal"
            android:textColor="@color/white"
            android:drawableLeft="@mipmap/punto"
            android:paddingLeft="10dp"
            android:gravity="center_vertical"
            android:textSize="15sp" />
        <Button
            android:onClick="onClickCalVehicular"

            android:text="@string/impuesto_vehicular"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:id="@+id/impuestoVehicular"
            android:layout_marginTop="10dp"
            android:background="@color/text_hint_normal"
            android:textColor="@color/white"
            android:drawableLeft="@mipmap/punto"
            android:paddingLeft="10dp"
            android:gravity="center_vertical"
            android:textSize="15sp" />
        <Button
            android:onClick="onClickCalURP"

            android:text="@string/unidad_de_referencia_procesal"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:id="@+id/impuestoIgv"
            android:layout_marginTop="10dp"
            android:background="@color/text_hint_normal"
            android:textColor="@color/white"
            android:drawableLeft="@mipmap/punto"
            android:paddingLeft="10dp"
            android:gravity="center_vertical"
            android:textSize="15sp" />


        <Button
            android:onClick="onClickCalIGV"
            android:text="IGV."
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:id="@+id/calculos_igvvv"
            android:layout_marginTop="10dp"
            android:background="@color/text_hint_normal"
            android:textColor="@color/white"
            android:drawableLeft="@mipmap/punto"
            android:paddingLeft="10dp"
            android:gravity="center_vertical"
            android:textSize="15sp" />


    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        android:layout_alignParentBottom="true"
        ads:adUnitId="@string/banner_ad_unit_id_for_testing">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>
